fixing bg image and links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thein Naing Oo</title>
+    <title>Thein's Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -31,8 +31,8 @@
         }
         /* Hero Section with Background */
         #home {
-            background-image: url('https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80');
-            /* //url('img/bg1.jpg'); */
+            /* background-image: url('https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80'); */
+            background-image: url('img/bg1.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -254,23 +254,23 @@
                  alt="Profile Photo" 
                  class="profile-photo mx-auto">
             <h1 class="text-5xl md:text-7xl font-bold mb-6 text-white">Hi, I'm <span class="text-primary">Thein Naing Oo</span></h1>
-            <p class="text-xl md:text-2xl mb-8 text-white">Full Stack Developer | UI/UX Designer | Problem Solver</p>
+            <p class="text-xl md:text-2xl mb-8 text-white">Frontend Developer | UI/UX Designer | Problem Solver</p>
             
             <!-- Social Links -->
             <div class="flex justify-center space-x-4 mb-8">
-                <a href="YOUR_LINKEDIN_URL" target="_blank" class="social-link-sm group">
+                <a href="https://www.linkedin.com/in/thein-naing-oo/" target="_blank" class="social-link-sm group">
                     <i class="fab fa-linkedin text-xl text-white group-hover:text-[#0077B5] transition-colors"></i>
                 </a>
-                <a href="YOUR_FACEBOOK_URL" target="_blank" class="social-link-sm group">
+                <a href="https://www.facebook.com/thein.ny.oo.96" target="_blank" class="social-link-sm group">
                     <i class="fab fa-facebook text-xl text-white group-hover:text-[#1877F2] transition-colors"></i>
                 </a>
-                <a href="https://wa.me/YOUR_PHONE_NUMBER" target="_blank" class="social-link-sm group">
+                <a href="https://wa.me/66990032166" target="_blank" class="social-link-sm group">
                     <i class="fab fa-whatsapp text-xl text-white group-hover:text-[#25D366] transition-colors"></i>
                 </a>
-                <a href="YOUR_LINE_URL" target="_blank" class="social-link-sm group">
+                <a href="https://line.me/R/ti/p/zannore" target="_blank" class="social-link-sm group">
                     <i class="fab fa-line text-xl text-white group-hover:text-[#00B900] transition-colors"></i>
                 </a>
-                <a href="YOUR_INSTAGRAM_URL" target="_blank" class="social-link-sm group">
+                <a href="https://www.instagram.com/thein_naing_00/" target="_blank" class="social-link-sm group">
                     <i class="fab fa-instagram text-xl text-white group-hover:text-[#E4405F] transition-colors"></i>
                 </a>
             </div>
