change UI and add images

--- a/photography.html
+++ b/photography.html
@@ -118,7 +118,7 @@
                 <!-- Nature Photos -->
                 <div class="gallery-item nature fade-in" data-category="nature">
                     <div class="relative overflow-hidden rounded-lg group">
-                        <img src="https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05" alt="Mountain Sunrise" class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-110">
+                        <img src="img/gallery/thai1.png" alt="Mountain Sunrise" class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-110">
                         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <div class="text-white text-center p-4">
                                 <h3 class="text-lg font-semibold mb-2">Mountain Sunrise</h3>
@@ -130,7 +130,7 @@
 
                 <div class="gallery-item nature fade-in" data-category="nature">
                     <div class="relative overflow-hidden rounded-lg group">
-                        <img src="https://images.unsplash.com/photo-1501854140801-50d01698950b" alt="Forest Stream" class="w-full h-80 object-cover transition-transform duration-500 group-hover:scale-110">
+                        <img src="img/gallery/ygn_city_hall.png" alt="Forest Stream" class="w-full h-80 object-cover transition-transform duration-500 group-hover:scale-110">
                         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <div class="text-white text-center p-4">
                                 <h3 class="text-lg font-semibold mb-2">Forest Stream</h3>
@@ -142,7 +142,7 @@
 
                 <div class="gallery-item nature fade-in" data-category="nature">
                     <div class="relative overflow-hidden rounded-lg group">
-                        <img src="https://images.unsplash.com/photo-1472214103451-9374bd1c798e" alt="Mountain Lake" class="w-full h-72 object-cover transition-transform duration-500 group-hover:scale-110">
+                        <img src="img/gallery/cloud1.png" alt="Mountain Lake" class="w-full h-72 object-cover transition-transform duration-500 group-hover:scale-110">
                         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <div class="text-white text-center p-4">
                                 <h3 class="text-lg font-semibold mb-2">Mountain Lake</h3>
@@ -155,7 +155,7 @@
                 <!-- Portrait Photos -->
                 <div class="gallery-item portrait fade-in" data-category="portrait">
                     <div class="relative overflow-hidden rounded-lg group">
-                        <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330" alt="Portrait Study" class="w-full h-80 object-cover transition-transform duration-500 group-hover:scale-110">
+                        <img src="img/gallery/cafe_portriate.png" alt="Portrait Study" class="w-full h-80 object-cover transition-transform duration-500 group-hover:scale-110">
                         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <div class="text-white text-center p-4">
                                 <h3 class="text-lg font-semibold mb-2">Portrait Study</h3>
