--- a/photography.html
+++ b/photography.html
@@ -110,7 +110,7 @@
                 <button class="gallery-filter active px-4 py-2 rounded-full text-sm font-medium transition-colors" data-filter="all">All</button>
                 <button class="gallery-filter px-4 py-2 rounded-full text-sm font-medium transition-colors" data-filter="nature">Nature</button>
                 <button class="gallery-filter px-4 py-2 rounded-full text-sm font-medium transition-colors" data-filter="portrait">Portrait</button>
-                <button class="gallery-filter px-4 py-2 rounded-full text-sm font-medium transition-colors" data-filter="urban">Urban</button>
+                <button class="gallery-filter px-4 py-2 rounded-full text-sm font-medium transition-colors" data-filter="street">Street</button>
             </div>
 
             <!-- Gallery Grid -->
